--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,12 +1,6 @@
 body {
   margin: 0;
-  background: #181818;
+  background: hsl(220,10%,10%);
   color: #ccc;
-  text-align: center;
   font: 200 12px/1.62 -apple-system,BlinkMacSystemFont,Segoe UI,Droid Sans,Helvetica Neue,PingFang SC,Hiragino Sans GB,Droid Sans Fallback,Microsoft YaHei,sans-serif;
-}
-
-html, body, #app {
-  height: 100%;
-  overflow: hidden;
 }
