--- a/src/components/App.less
+++ b/src/components/App.less
@@ -1,3 +1,109 @@
-.app {
-  font-size: 12px;
+.main {
+  font-size: 24px;
+  width: 100%;
+  // height: 100%;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  margin: 0 auto;
+  padding: 0 24px 24px;
+  box-sizing: border-box;
+  max-width: 640px;
+  input {
+    font-size: 24px;
+  }
+  input, button {
+    outline: none;
+  }
+}
+
+h1 {
+  margin: 1em 0;
+  font-size: 96px;
+  line-height: 1em;
+}
+
+.generator {
+  .control-input {
+    margin: 1em 0;
+    width: 100%;
+    height: 2em;
+    display: flex;
+    align-items: center;
+    line-height: 2em;
+    label {
+      flex: 1;
+      border-bottom: 1px solid #fff;
+      font-weight: bold;
+    }
+    input {
+      width: 100%;
+      height: 2em;
+      padding: 0;
+      margin: 0;
+      color: #fff;
+      background: transparent;
+      border: none;
+      box-shadow: none;
+      border-bottom: 1px solid #fff;
+      text-align: center;
+      outline: none;
+    }
+  }
+  .checkboxs {
+    display: grid;
+    grid-template-columns: auto auto;
+    .control {
+      position: relative;
+      input[type=checkbox] {
+        display: none;
+      }
+      .checkmark {
+        width: 24px;
+        height: 24px;
+        background: #fff;
+        display: inline-block;
+        margin-right: 0.5em;
+        &:after {
+          content: "";
+          position: absolute;
+        }
+      }
+      input[type=checkbox]:checked ~ .checkmark:after {
+        left: 9px;
+        top: 9px;
+        width: 4px;
+        height: 8px;
+        border: solid hsl(220,10%,10%);
+        border-width: 0 3px 3px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+    }
+  }
+  button {
+    width: 100%;
+    height: 3em;
+    margin: 3em 0;
+    font-size: 24px;
+    text-transform: uppercase;
+    background-color: hsl(220,10%,10%);
+    border: 1px solid #ccc;
+    color: #fff;
+    transition: all 200ms ease;
+    cursor: pointer;
+    &:hover {
+      background-color: #fff;
+      border: #fff;
+      color: hsl(220,10%,10%);
+    }
+  }
+}
+
+.result {
+  width: 100%;
+  font-size: 48px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
