--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,3 +4,7 @@ body {
   color: #ccc;
   font: 200 12px/1.62 -apple-system,BlinkMacSystemFont,Segoe UI,Droid Sans,Helvetica Neue,PingFang SC,Hiragino Sans GB,Droid Sans Fallback,Microsoft YaHei,sans-serif;
 }
+
+input, button {
+  outline: none;
+}
