feat: add form control

--- a/src/components/Checkbox.module.less
+++ b/src/components/Checkbox.module.less
@@ -1,5 +1,9 @@
 .checkbox {
   position: relative;
+  user-select: none;
+  &, * {
+    cursor: pointer;
+  }
   input[type=checkbox] {
     display: none;
   }
