--- a/src/components/Button.module.less
+++ b/src/components/Button.module.less
@@ -6,9 +6,11 @@
   text-transform: uppercase;
   background-color: hsl(220,10%,10%);
   border: 1px solid #ccc;
+  border-radius: 0;
   color: #fff;
   transition: all 200ms ease;
   cursor: pointer;
+  user-select: none;
   &:hover {
     background-color: #fff;
     border: #fff;
