--- a/src/components/Input.module.less
+++ b/src/components/Input.module.less
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   line-height: 2em;
+  user-select: none;
   label {
     flex: 1;
     border-bottom: 1px solid #fff;
