feat: update stylesheet

--- a/src/components/App.module.less
+++ b/src/components/App.module.less
@@ -15,9 +15,11 @@
   color: #fff;
   user-select: none;
   cursor: pointer;
+  .title {
+    margin-right: 0.5em;
+  }
   .icon {
     display: inline-block;
-    margin-left: 0.5em;
     transition: all 800ms ease;
   }
   &:hover {
