--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,6 +14,11 @@ input, button {
   outline: none;
 }
 
+a, a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
 .iconfont {
   font-size: 1em;
 }
