--- a/src/components/App.module.less
+++ b/src/components/App.module.less
@@ -2,7 +2,7 @@
   font-size: 24px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 24px 96px;
+  padding: 0 24px;
   box-sizing: border-box;
   max-width: 640px;
 }
@@ -57,5 +57,21 @@
     .icon {
       color: #fff;
     }
+  }
+}
+
+.copyright {
+  margin: 96px 0 48px;
+  font-size: 12px;
+  text-align: right;
+  a {
+    color: #ccc;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  .symbol {
+    padding: 0 0.5em;
   }
 }
